# selenium-kotlin-template

./: LICENSE  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
src/test/kotlin/cucumber/: BaseCucumberTestRunner.kt  CucumberRunnerTest.kt  Hooks.kt  OnlyFailedTestRunner.kt
src/test/kotlin/cucumber/steps/: GeneralStepsDefinition.kt
src/test/kotlin/pom/: BreadCrumbWidget.kt  CookiesBannerWidget.kt  MainFramePage.kt  MainMenuWidget.kt  MobileMenuWidget.kt  ServicesPage.kt
src/test/kotlin/pom/common/: BreadCrumbWidget.kt  CookiesBannerWidget.kt  DesktopMenuWidget.kt  MainFramePage.kt  MobileMenuWidget.kt
src/test/kotlin/pom/menu/desktop/: MainMenuWidget.kt  SearchMenuWidget.kt  ServicesPopupMenuWidget.kt
src/test/kotlin/pom/menu/mobile/: MobileMenuWidget.kt
src/test/kotlin/pom/pages/home/: HomePage.kt
src/test/kotlin/pom/pages/services/: QualityAssurancePage.kt  ServicesPage.kt
src/test/kotlin/pom/searchresult/: SearchResultItemWidget.kt  SearchResultsPage.kt
src/test/kotlin/pom/searchresults/: SearchResultsPage.kt
src/test/kotlin/testng/: MtpKotlinBase.kt  MtpKotlinDesktop.kt  MtpKotlinMobile.kt  MtpKotlinTest.kt
src/test/kotlin/testng/listeners/: TestNGListener.kt
src/test/kotlin/testng/retry/: Retry.kt
src/test/kotlin/testng/tests/: MtpKotlinTest.kt
src/test/kotlin/util/: CommonHooks.kt  Hooks.kt  PropertiesHelper.kt  ReportHelper.kt  TestData.kt
src/test/resources/: project.properties  selenide.properties  testng.xml
src/test/resources/features/: mtp.feature
